--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@
             <h3>Grundlagen CSS – Schlüsselbegriffe</h3>
             <ul>
               <li>
-                <strong>Selektor</strong>, <strong>Eigenschaft</strong>,
-                <strong>Wert</strong>
+                <strong>Selektor (selector)</strong>, <strong>Eigenschaft (property)</strong>,
+                <strong>Wert (value)</strong>
               </li>
               <li><strong>Responsive Design</strong> (für Mobilgeräte)</li>
               <li><strong>Klassen</strong> vs. <strong>IDs</strong></li>
