Revert "überschrift geändert"
This reverts commit 0a1a4331471126f7eaf6b7065e16f704f82c14f3.

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       <div class="slides">
         <!-- Title Slide -->
         <section>
-          <h1>TESTSBDFJBSDF</h1>
+          <h1>Web-Entwicklung für Forscher*innen</h1>
           <h3>
             Grundlagen & KI-gestützte Entwicklung mit
             <strong>"Vibe Coding"</strong>
